# qmesydaq

./: .gitignore  .svnignore  AUTHORS  CMakeLists.txt  CPackOptions.cmake.in  Dockerfile.fedora-35  Doxyfile  MesyDAQDetectorDetector.cpp  MesyDAQDetectorDetectorImpl.cpp  QMesyDAQ.sln  README  README.md  TODO  config.h  controlinterface.cpp  controlinterface.h  corbathread.cpp  corbathread.h  counter.cpp  counter.h  edist.prf  histogram.cpp  histogram.h  images.qrc  main.cpp  mainwidget.cpp  mainwidget.h  mainwindow.cpp  mainwindow.h  mcpd8.cpp  mcpd8.h  mcpd8p.cpp  mdefines.h  measurement.cpp  measurement.h  mesydaq.pro  mesydaq2.cpp  mesydaq2.h  mesydaq2mainwidget.ui  mesydaq2mainwindow.ui  (+16 more)
admin/: svn2package.sh
debian/: changelog  control  copyright  qmesydaq.install  rules
doc/: MDLL_Fragen_Anregungen.txt  TODO  application.dox  command_reference.dox  functions.dox  mesydaq.dox  mesytec_protocol.dox  specification.dox  usermanual.dox
doc/sphinx/: Application_Considerations_.rst  Command_Reference.rst  Functional_descriptions_.rst  Listmode_Data_Format.rst  MDLL.rst  MDLL_Command_Reference.rst  MDLL_Databuffers.rst  commandbuffers.rst  conf.py  databuffers.rst  index.rst  make.bat  triggerevents.inc
interfaces/: interfaces.pro
interfaces/caress/: CARESSLoop.cpp  CARESSLoop.h  caress.pro  caresscontrol.h  caressmeasurement.cpp  corbadevice.idl  mapcorrectparser.cpp  mapcorrectparser.h
interfaces/taco/: MesyDAQBase.cpp  MesyDAQBase.h  MesyDAQBaseImpl.cpp  MesyDAQDetectorDetector.cpp  MesyDAQDetectorDetector.h  MesyDAQDetectorDetectorImpl.cpp  MesyDAQIOCounter.cpp  MesyDAQIOCounter.h  MesyDAQIOCounterImpl.cpp  MesyDAQIOTimer.cpp  MesyDAQIOTimer.h  MesyDAQIOTimerImpl.cpp  MesyDAQServer.h  TACOLoop.cpp  TACOLoop.h  TACOQMesydaqInterface.h  device_server.c  qmesydaq.res  startup.cpp  taco.pro  taco_utils.h  tacocontrol.cpp  tacocontrol.h  tacothread.cpp  tacothread.h
interfaces/tango/: ClassFactory.cpp  TANGOLoop.cpp  TANGOLoop.h  tango.pro
interfaces/tcp/: TCPLoop.cpp  TCPLoop.h  remoteserver.cpp  remoteserver.h  tcp.pro
lib/: .svnignore  CMakeLists.txt  Doxyfile  calibration.cpp  calibration.h  counter.cpp  counter.h  datarepeater.cpp  datarepeater.h  detector.cpp  detector.h  editormemory.cpp  editormemory.h  histogram.cpp  histogram.h  inifile.cpp  inifile.h  lib.pro  libQMesyDAQ.vcproj  libqmesydaq_global.h  linearmapcorrect.cpp  logging.cpp  logging.h  m2d.cpp  m2dfactory.cpp  mapcorrect.cpp  mapcorrect.h  mappeddetector.cpp  mappeddetector.h  mappedhistogram.cpp  mappedhistogram.h  mcpd.cpp  mcpd.h  mcpd2.cpp  mcpd2.h  mcpd8.cpp  mcpd8.h  mcpdmdll.cpp  mdefines.h  mdll.cpp  (+35 more)
misc/: mdll  puma-mstd  puma-psd  sans1  spodi
qled/: CMakeLists.txt  README  qled.pro
qled/example/: example.pro  main.cpp
qled/plugin/: plugin.pro  qledplugin.cpp  qledplugin.h
qled/src/: qled.cpp  qled.h  qled.qrc  src.pro
qmesydaq/: .svnignore  CMakeLists.txt  ChannelSpinBox.cpp  ChannelSpinBox.h  CommandEvent.cpp  CommandEvent.h  ConfigFileDialog.cpp  ConfigFileDialog.h  Doxyfile  LoopObject.cpp  LoopObject.h  MCPDSpinBox.cpp  MCPDSpinBox.h  MesyDAQDetectorDetector.h  ModuleSpinBox.cpp  ModuleSpinBox.h  MultipleLoopApplication.cpp  MultipleLoopApplication.h  QMesyDAQ.vcproj  QMesydaqDetectorInterface.cpp  QMesydaqDetectorInterface.h  QtInterface.cpp  QtInterface.h  StatusBarEntry.cpp  StatusBarEntry.h  additionaleventconfig.ui  caresscontrol.cpp  caresscontrol.h  caresssetup.cpp  caresssetup.h  caresssetup.ui  channelhistogramsetup.ui  colormaps.cpp  colormaps.h  colorwidget.cpp  colorwidget.h  controlinterface.cpp  controlinterface.h  corbathread.h  data.cpp  (+90 more)
qmesydaq/caress/: corbathread.cpp
qmesydaq/diskspace/: diskspace.cpp  diskspace.h  diskspace.pro  main.cpp
qmesydaq/setupwidget/GraphicsSceneWidget/: GraphicsSceneWidget.pro  button.cpp  button.h  dialog.cpp  dialog.h  dialogbase.cpp  dialogbase.h  graphicsscene.cpp  graphicsscene.h  inputdialog.cpp  inputdialog.h  item.cpp  item.h  itemaction.cpp  itemaction.h  line.cpp  line.h  main.cpp  templine.cpp  templine.h
qmesydaq/setupwidget/GraphicsSceneWidget/res/: icons.qrc
qmesydaq/setupwidget/SetupWidget/: SetupWidget.pro  addtreedialog.cpp  addtreedialog.h  canvas.cpp  canvas.h  channel.cpp  channel.h  channelinputdialog.cpp  channelinputdialog.h  inputdialogmcpd_8.cpp  inputdialogmcpd_8.h  main.cpp  maindialog.cpp  maindialog.h  mcpd_8.cpp  mcpd_8.h  mcpd_8inputdialog.cpp  mcpd_8inputdialog.h  mpsd_8.cpp  mpsd_8.h  mpsd_8inputdialog.cpp  mpsd_8inputdialog.h  pc.cpp  pc.h  pcinputdialog.cpp  pcinputdialog.h  setupview.cpp  setupview.h
qmesydaq/taco/: MesyDAQServer.h  tacothread.h
test/: .svnignore  main.cpp  test.pro
test/calibration/: calibration.pro  main.cpp
test/colormaps/: colormaps.pro  main.cpp  mainwindow.cpp  mainwindow.h  selectcolorbox.cpp  selectcolorbox.h
test/countrates/: countrates.pro  main.cpp  rate_plot.cpp  rate_plot.h
test/dummy/: dummy.pro  main.cpp
test/fill/: fill.pro  hist.h  main.cpp
test/histcopy/: histcopy.pro  main.cpp
test/histogramming/: histogramming.pro  main.cpp
test/input/: fast_sender.c  input.pro  main.cpp
test/input12/: input12.pro  testapplication.h
test/input2/: input2.pro  main.cpp  testapplication.h
test/input22/: input22.pro  main.cpp  testapplication.h
test/input3/: input3.pro  main.cpp
test/input32/: input32.pro  testapplication.h
test/input4/: input4.pro  main.cpp  packagehandler.cpp  packagehandler.h  packageprovider.cpp
test/input5/: input5.pro  main.cpp  packagehandler.cpp  packagehandler.h  packageprovider.cpp  packageprovider.h
test/input6/: hist.h  input6.pro  main.cpp  packagehandler.cpp  packagehandler.h  packageprovider.cpp  packageprovider.h
test/inspect/: inspect.pro  main.cpp
test/ipaddresswidget/: ipaddresswidget.pro  main.cpp
test/listfile/: listfile.pro  main.cpp
test/loadsetup/: loadsetup.pro  main.cpp
test/lstohisto/: lstohisto.pro  main.cpp
test/mapping/: main.cpp  mapping.pro
test/maptest/: histomapping.cpp  histomapping.h  main.cpp  maptest.pro
test/plot/: data.cpp  (+14 more)
tools/: init-qmesydaq  tools.pro
(+74 files in other folders)
